<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:shrinkColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:layout_width="115dp"
            android:layout_height="15dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelTaskId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelTaskId"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewTaskId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelTitle"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelDescription"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelCreatedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_on"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewCreatedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelBoardName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelOwner"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </TableRow>

</TableLayout>